--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
            <li><p>Contact Number  : 9390059878 </p></li>
            <li><p>Mail ID         : shivaboyini1306@gmail.com</p></div><hr></li>
         </ol>
-         <div><p>Education    :       <a href="Personal-Portfolio/education.html" target="_main"><img src="Personal-Portfolio\Images\edu.jpg" height=40px></a></p></div><hr>
+         <div><p>Education    :       <a href="Personal-Portfolio/education.html" target="_main"><img src="Personal-Portfolio/Images/edu.jpg" height=40px></a></p></div><hr>
          <div><p>Experience   :      <a href="C:/Users/SHIVA/Desktop/Mini_Project/Experience.html" target="_main"><img src="C:\Users\SHIVA\Desktop\Mini_Project\Images\exp.jpg" height=30px></a></p></div><hr>
          <div><p>Projects     :                  <a href="C:/Users/SHIVA/Desktop/Mini_Project/Projects.html" target="_main"><img src="C:\Users\SHIVA\Desktop\Mini_Project\Images\pr.jpg" height=30px></a></p>
               <p><a href="https://github.com/Shivakumar1306?tab=repositories" target="_main"><img src="C:\Users\SHIVA\Desktop\Mini_Project\Images\git.jpg" height=50px></a></p>
