--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
            <li><p>Mail ID         : shivaboyini1306@gmail.com</p></div><hr></li>
         </ol>
          <div><p>Education    :       <a href="education.html" target="_main"><img src="Images/edu.jpg" height=40px></a></p></div><hr>
-         <div><p>Experience   :      <a href="C:/Users/SHIVA/Desktop/Mini_Project/Experience.html" target="_main"><img src="C:\Users\SHIVA\Desktop\Mini_Project\Images\exp.jpg" height=30px></a></p></div><hr>
-         <div><p>Projects     :                  <a href="C:/Users/SHIVA/Desktop/Mini_Project/Projects.html" target="_main"><img src="C:\Users\SHIVA\Desktop\Mini_Project\Images\pr.jpg" height=30px></a></p>
-              <p><a href="https://github.com/Shivakumar1306?tab=repositories" target="_main"><img src="C:\Users\SHIVA\Desktop\Mini_Project\Images\git.jpg" height=50px></a></p>
+         <div><p>Experience   :      <a href="Experience.html" target="_main"><img src="Images/exp.jpg" height=30px></a></p></div><hr>
+         <div><p>Projects     :                  <a href="Projects.html" target="_main"><img src="Images/pr.jpg" height=30px></a></p>
+              <p><a href="https://github.com/Shivakumar1306?tab=repositories" target="_main"><img src="Images/git.jpg" height=50px></a></p>
 
         </div><hr>
 
        <!-- Certificates -->
        
        <div>
-           <h4>Certificates :   <a href="C:\Users\SHIVA\Desktop\Mini_Project\certificate.html" target="_main"><img src="C:\Users\SHIVA\Desktop\Mini_Project\Images\cer.jpg" height=50px></a></h4>
+           <h4>Certificates :   <a href="certificate.html" target="_main"><img src="Images/cer.jpg" height=50px></a></h4>
              <p>1.Certificate from Internshala on successfull completion of Web Development training.</p>
              <p>2.Certificate of recognition as Teck Knight from Cognizant Technology Solutions.</p>
            
