--- a/certificate.html
+++ b/certificate.html
@@ -14,10 +14,10 @@
     <main>
         <ol>
             <li>
-                <img src="C:\Users\SHIVA\Desktop\Mini_Project\Images\webdev.jpg" height=500px>
+                <img src="Images/webdev.jpg" height=500px>
             </li> <hr>
             <li>
-                <img src="C:\Users\SHIVA\Desktop\Mini_Project\Images\knightt.jpg" height=500px>
+                <img src="Images/knightt.jpg" height=500px>
             </li><hr>
         </ol>
     </main><hr>
